# 14th-lanqiaocup-NO.1-

./: Project.ioc  README.md
Application/: lcd.c  lcd.h  led.c
Core/Inc/: main.h  stm32g4xx_it.h
Core/Src/: adc.c  gpio.c  main.c  stm32g4xx_it.c  tim.c
MDK-ARM/: .clangd  Project+Project.cbuild.yml  Project+Project.cprj  Project.cbuild-idx.yml  Project.cbuild-pack.yml  Project.cbuild-set.yml  Project.cproject.yml  Project.csolution.yml  Project.uvguix.19308  Project.uvoptx  Project.uvprojx  vcpkg-configuration.json
MDK-ARM/Project/: Project.axf  Project.build_log.htm  Project.hex  Project.htm  Project.lnp  Project.map  Project_Project.dep  adc.d  gpio.d  lcd.d  led.d  main.d  stm32g4xx_hal.d  stm32g4xx_hal_adc.d  stm32g4xx_hal_adc_ex.d  stm32g4xx_hal_cortex.d  stm32g4xx_hal_dma.d  stm32g4xx_hal_dma_ex.d  stm32g4xx_hal_exti.d  stm32g4xx_hal_flash.d  stm32g4xx_hal_flash_ex.d  stm32g4xx_hal_flash_ramfunc.d  stm32g4xx_hal_gpio.d  stm32g4xx_hal_msp.d  stm32g4xx_hal_pwr.d  stm32g4xx_hal_pwr_ex.d  stm32g4xx_hal_rcc.d  stm32g4xx_hal_rcc_ex.d  stm32g4xx_hal_tim.d  stm32g4xx_hal_tim_ex.d  stm32g4xx_it.d  system_stm32g4xx.d  tim.d
MDK-ARM/RTE/_Project/: RTE_Components.h
MDK-ARM/tmp/Project/Project/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
